# simlog

./: .gitignore  .ocamlformat  Makefile  README  README.md  dog.opam  dune  dune-project  simlog.opam
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  build.yml  default.yml
lib/: Simlog.ml  dog.ml  dune  filter.ml  formatter.ml  level.ml  printer.ml  recorder.ml  simlog.ml  target.ml  thread.ml  time.ml
test/: dune  simlog.ml  test_dog.ml  test_simlog.ml
